fix: vertical-align: text-top

--- a/src/pages/2147483647/style.css
+++ b/src/pages/2147483647/style.css
@@ -19,6 +19,7 @@ input[type="number"] {
   padding-left: 0.5em;
   border-left: 5px solid var(--color-fg);
   text-align: left;
+  vertical-align: text-top;
 }
 
 .input_area {
